diff exprs working